--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
     <title>Lion School</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
     <header>
         <div class="iconName">
@@ -35,8 +43,8 @@
                 <img src="./img/icon-email.svg" alt="">
                 <span>lionschool@gmail.com</span>
             </div>
-            
-            <div class="contato">
+
+            <div class="contato contatoPin">
                 <img src="./img/pin.svg" alt="">
                 <span>Rua tcc, 211, Centro, Jandira</span>
             </div>
@@ -46,9 +54,13 @@
         <span>Copyright © 2022 | Guilherme Moreira</span>
 
         <div class="midiasSociais">
-
+            <img src="img/youtube.svg" alt="">
+            <img src="img/twitter.svg" alt="">
+            <img src="img/instagram.svg" alt="">
+            <img src="img/facebook.svg" alt="">
         </div>
     </footer>
-    
+
 </body>
+
 </html>
