tela inicial finalizada

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="iconName">
             <img src="img/logo-image.svg" alt="">
-            <span>Lion School</span>
+            <span>Lion <br> School</span>
         </div>
 
         <div class="back">
@@ -28,7 +28,28 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <div class="fraseImagem">
+            <p>Escolha um <span>curso</span> <br> para gerenciar</p>
+            <img src="img/devices.svg" alt="">
+        </div>
+
+        <img src="img/studant.svg" alt="">
+
+        <div class="cursos">
+
+            <div class="curso">
+                <img src="img/icon-ds.svg" alt="">
+                <span>DS</span>
+            </div>
+
+            <div class="curso">
+                <img src="img/icon-redes.svg" alt="">
+                <span>DS</span>
+            </div>
+
+        </div>
+    </main>
 
     <footer>
 
