home criado pelo JS e alunos finalizado versão html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <script src="app.js" defer></script>
     <title>Lion School</title>
 
+    <!-- ROBOTO -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <!-- POPPINS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
 </head>
@@ -29,26 +37,145 @@
     </header>
 
     <main>
-        <div class="fraseImagem">
-            <p>Escolha um <span>curso</span> <br> para gerenciar</p>
-            <img src="img/devices.svg" alt="">
-        </div>
+        <div class="container-home" id="container-home">
 
-        <img src="img/studant.svg" alt="">
-
-        <div class="cursos">
-
-            <div class="curso">
-                <img src="img/icon-ds.svg" alt="">
-                <span>DS</span>
+            <!-- <div class="fraseImagem">
+                <p>Escolha um <span>curso</span> <br> para gerenciar</p>
+                <img src="img/devices.svg" alt="">
             </div>
 
-            <div class="curso">
-                <img src="img/icon-redes.svg" alt="">
-                <span>DS</span>
-            </div>
+            <img src="img/studant.svg" alt="">
+
+            <div class="cursos">
+
+                <div class="curso">
+                    <img src="img/icon-ds.svg" alt="">
+                    <span>DS</span>
+                </div>
+
+                <div class="curso">
+                    <img src="img/icon-redes.svg" alt="">
+                    <span>DS</span>
+                </div>
+
+            </div> -->
 
         </div>
+
+        <div class="container-alunos">
+
+            <span class="title">Desenvolvimento de Sistemas</span>
+
+            <div class="cards">
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+                <div class="card">
+                    <img src="img/icon-profile.svg" alt="">
+                    <span>Guilherme Moreira de Souza</span>
+                </div>
+
+            </div>
+        </div>
+
     </main>
 
     <footer>
