tela dos dados do aluno criada, porem incompleta

--- a/index.html
+++ b/index.html
@@ -176,6 +176,18 @@
             </div>
         </div>
 
+        <div class="container-aluno">
+            
+            <div class="profile">
+                <img src="img/icon-profile.svg" alt="">
+                <span>Guilherme Moreira de Souza</span>
+            </div>
+
+            <div class="graphics">
+
+            </div>
+        </div>
+
     </main>
 
     <footer>
