--- a/index.html
+++ b/index.html
@@ -24,160 +24,52 @@
 </head>
 
 <body>
-    <header>
-        <div class="iconName">
-            <img src="img/logo-image.svg" alt="">
-            <span>Lion <br> School</span>
+    <header id="header">
+        <div class="mainHeader">
+            <div class="iconName">
+                <img src="img/logo-image.svg" alt="">
+                <span>Lion <br> School</span>
+            </div>
+
+            <div class="back">
+                <img src="/img/back.svg" alt="">
+                <span>Sair</span>
+            </div>
         </div>
 
-        <div class="back">
-            <img src="/img/back.svg" alt="">
-            <span>Sair</span>
+        <div class="headerInformations">
+            <span>Status</span>
+
+            <div class="legenda">
+
+                <span>LEGENDA</span>
+
+                <div class="information">
+                    <div class="quadrado azul"></div>
+                    <span>Cursando</span>
+                </div>
+
+                <div class="information">
+                    <div class="quadrado amarelo"></div>
+                    <span>Finalizado</span>
+                </div>
+
+            </div>
+
         </div>
     </header>
 
     <main>
         <div class="container-home" id="container-home">
 
-            <!-- <div class="fraseImagem">
-                <p>Escolha um <span>curso</span> <br> para gerenciar</p>
-                <img src="img/devices.svg" alt="">
-            </div>
+        </div>
 
-            <img src="img/studant.svg" alt="">
-
-            <div class="cursos">
-
-                <div class="curso">
-                    <img src="img/icon-ds.svg" alt="">
-                    <span>DS</span>
-                </div>
-
-                <div class="curso">
-                    <img src="img/icon-redes.svg" alt="">
-                    <span>DS</span>
-                </div>
-
-            </div> -->
+        <div class="container-alunos" id="container-alunos">
 
         </div>
 
-        <div class="container-alunos">
+        <div class="container-aluno" id="container-aluno">
 
-            <span class="title">Desenvolvimento de Sistemas</span>
-
-            <div class="cards">
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-                <div class="card">
-                    <img src="img/icon-profile.svg" alt="">
-                    <span>Guilherme Moreira de Souza</span>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="container-aluno">
-            
             <div class="profile">
                 <img src="img/icon-profile.svg" alt="">
                 <span>Guilherme Moreira de Souza</span>
@@ -185,8 +77,73 @@
 
             <div class="graphics">
 
+                <div class="dataGraphics">
+                    <span class="number">90</span>
+
+                    <div class="bar">
+                        <div class="filledBar"></div>
+                    </div>
+
+                    <span class="matter">SOP</span>
+
+                </div>
+
+                <div class="dataGraphics">
+                    <span class="number">30</span>
+
+                    <div class="bar">
+                        <div class="filledBar"></div>
+                    </div>
+
+                    <span class="matter">IPR</span>
+
+                </div>
+
+                <div class="dataGraphics">
+                    <span class="number">50</span>
+
+                    <div class="bar">
+                        <div class="filledBar"></div>
+                    </div>
+
+                    <span class="matter">LIMA</span>
+
+                </div>
+
+                <div class="dataGraphics">
+                    <span class="number">90</span>
+
+                    <div class="bar">
+                        <div class="filledBar"></div>
+                    </div>
+
+                    <span class="matter">BD</span>
+
+                </div>
+
+                <div class="dataGraphics">
+                    <span class="number">75</span>
+
+                    <div class="bar">
+                        <div class="filledBar"></div>
+                    </div>
+
+                    <span class="matter">PBE</span>
+
+                </div>
+
+                <div class="dataGraphics">
+                    <span class="number">100</span>
+
+                    <div class="bar">
+                        <div class="filledBar"></div>
+                    </div>
+
+                    <span class="matter">PFE</span>
+
+                </div>
+
             </div>
-        </div>
 
     </main>
 
