--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
+    <script type="module" src="./js/app.js" defer></script>
     <title>Lion School</title>
 
     <!-- ROBOTO -->
@@ -37,26 +37,6 @@
             </div>
         </div>
 
-        <div class="headerInformations">
-            <span>Status</span>
-
-            <div class="legenda">
-
-                <span>LEGENDA</span>
-
-                <div class="information">
-                    <div class="quadrado azul"></div>
-                    <span>Cursando</span>
-                </div>
-
-                <div class="information">
-                    <div class="quadrado amarelo"></div>
-                    <span>Finalizado</span>
-                </div>
-
-            </div>
-
-        </div>
     </header>
 
     <main>
