botão de voltar entre home e alunos funcionando

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <span>Lion <br> School</span>
             </div>
 
-            <div class="back">
+            <div id="back" class="back">
                 <img src="/img/back.svg" alt="">
-                <span>Sair</span>
+                <span id="textback">Sair</span>
             </div>
         </div>
 
