--- a/index.html
+++ b/index.html
@@ -50,12 +50,7 @@
 
         <div class="container-aluno" id="container-aluno">
 
-            <div class="profile">
-                <img src="img/icon-profile.svg" alt="">
-                <span>Guilherme Moreira de Souza</span>
-            </div>
-
-            <div class="graphics">
+            <!-- <div class="graphics">
 
                 <div class="dataGraphics">
                     <span class="number">90</span>
@@ -123,7 +118,7 @@
 
                 </div>
 
-            </div>
+            </div> -->
 
     </main>
 
