adicionando alguns detalhes de sombra

--- a/index.html
+++ b/index.html
@@ -40,85 +40,13 @@
     </header>
 
     <main>
-        <div class="container-home" id="container-home">
-
-        </div>
+        <div class="container-home" id="container-home"></div>
 
         <div class="container-alunos" id="container-alunos">
 
         </div>
 
-        <div class="container-aluno" id="container-aluno">
-
-            <!-- <div class="graphics">
-
-                <div class="dataGraphics">
-                    <span class="number">90</span>
-
-                    <div class="bar">
-                        <div class="filledBar"></div>
-                    </div>
-
-                    <span class="matter">SOP</span>
-
-                </div>
-
-                <div class="dataGraphics">
-                    <span class="number">30</span>
-
-                    <div class="bar">
-                        <div class="filledBar"></div>
-                    </div>
-
-                    <span class="matter">IPR</span>
-
-                </div>
-
-                <div class="dataGraphics">
-                    <span class="number">50</span>
-
-                    <div class="bar">
-                        <div class="filledBar"></div>
-                    </div>
-
-                    <span class="matter">LIMA</span>
-
-                </div>
-
-                <div class="dataGraphics">
-                    <span class="number">90</span>
-
-                    <div class="bar">
-                        <div class="filledBar"></div>
-                    </div>
-
-                    <span class="matter">BD</span>
-
-                </div>
-
-                <div class="dataGraphics">
-                    <span class="number">75</span>
-
-                    <div class="bar">
-                        <div class="filledBar"></div>
-                    </div>
-
-                    <span class="matter">PBE</span>
-
-                </div>
-
-                <div class="dataGraphics">
-                    <span class="number">100</span>
-
-                    <div class="bar">
-                        <div class="filledBar"></div>
-                    </div>
-
-                    <span class="matter">PFE</span>
-
-                </div>
-
-            </div> -->
+        <div class="container-aluno" id="container-aluno"></div>
 
     </main>
 
